overFlow bug Fix

--- a/project/Formation PJ/index.css
+++ b/project/Formation PJ/index.css
@@ -43,8 +43,9 @@ html,body {
 .rightDiv {
     height: 100%;
     width: 70%;
-    background-color: rgb(192, 192, 192);
+    background-color: rgb(255, 254, 254);
     box-sizing: border-box;
+    overflow-y: scroll;
 }
 
 .content {
